--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://koteashwini511.github.io/nxtwave-assignment",
   "name": "nxtwave-asg",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
